More of the same: migration to Junit5